[gd_scene load_steps=9 format=2]

[ext_resource path="res://gfx/room/room3/Room_3_Graphic_v2.png" type="Texture" id=1]
[ext_resource path="res://core/doodad/wall_door/wall_door.tscn" type="PackedScene" id=2]
[ext_resource path="res://core/doodad/gun/gun.tscn" type="PackedScene" id=3]
[ext_resource path="res://core/camera/room_camera.tscn" type="PackedScene" id=4]
[ext_resource path="res://core/doodad/computer/computer.tscn" type="PackedScene" id=5]
[ext_resource path="res://core/doodad/capsule/capsule.tscn" type="PackedScene" id=6]
[ext_resource path="res://core/room/bridge_room.gd" type="Script" id=7]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 10, 84 )

[node name="BridgeRoom" type="Node"]
script = ExtResource( 7 )

[node name="ColorRect" type="ColorRect" parent="."]
margin_right = 960.0
margin_bottom = 640.0
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CabinDoor" parent="." instance=ExtResource( 2 )]
position = Vector2( 104, 380 )
destination_room = "CabinRoom"
from_room = "BridgeRoom"
sprite_suffix = "bridge"

[node name="LinkDoor" parent="." instance=ExtResource( 2 )]
position = Vector2( 860, 380 )
is_unlocked = true
is_axe_door = true
destination_room = "LinkRoom"
from_room = "BridgeRoom"
sprite_suffix = "bridge"

[node name="Room" type="Sprite" parent="."]
position = Vector2( 480, 292 )
texture = ExtResource( 1 )

[node name="Gun" parent="." instance=ExtResource( 3 )]
position = Vector2( 476, 396 )

[node name="Computer" parent="." instance=ExtResource( 5 )]
position = Vector2( 676, 392 )
has_key = true

[node name="Capsule5" parent="." instance=ExtResource( 6 )]
position = Vector2( 252, 348 )

[node name="Capsule6" parent="." instance=ExtResource( 6 )]
position = Vector2( 348, 348 )

[node name="Boundary" type="StaticBody2D" parent="."]

[node name="LeftWall" type="CollisionShape2D" parent="Boundary"]
position = Vector2( 132, 380 )
shape = SubResource( 1 )

[node name="RightWall" type="CollisionShape2D" parent="Boundary"]
position = Vector2( 828, 380 )
shape = SubResource( 1 )

[node name="Camera" parent="." instance=ExtResource( 4 )]
visible = false
